--- a/Model/model_quality_metrics/manifest.json
+++ b/Model/model_quality_metrics/manifest.json
@@ -338,6 +338,35 @@
         "Built": "R 3.6.0; x86_64-pc-linux-gnu; 2019-07-17 18:25:07 UTC; unix"
       }
     },
+    "bikeHelpR": {
+      "Source": "Internal",
+      "Repository": "https://demo.rstudiopm.com/internal/latest",
+      "GithubRepo": null,
+      "GithubUsername": null,
+      "GithubRef": null,
+      "GithubSha1": null,
+      "description": {
+        "Package": "bikeHelpR",
+        "Type": "Package",
+        "Title": "Package of Helper Functions for the Bike Prediction Asset",
+        "Authors@R": "person(\"Alex\", \"Gold\", email = \"alex.gold@rstudio.com\",\n                  role = c(\"aut\", \"cre\"))",
+        "Description": "Helpful functions for bike prediction.",
+        "License": "MIT + file LICENSE",
+        "Encoding": "UTF-8",
+        "LazyData": "true",
+        "Imports": "purrr, magrittr, tibble",
+        "RoxygenNote": "6.1.1",
+        "Repository": "RSPM",
+        "RemoteSha": "60bec4f0e0430d53c438674b0fc86edf19fc63a5",
+        "Version": "0.2.0",
+        "Date": "2019-12-09",
+        "NeedsCompilation": "no",
+        "Packaged": "2019-12-09 17:26:08 UTC; root",
+        "Author": "Alex Gold [aut, cre]",
+        "Maintainer": "Alex Gold <alex.gold@rstudio.com>",
+        "Built": "R 3.6.0; ; 2019-12-09 17:28:08 UTC; unix"
+      }
+    },
     "bit": {
       "Source": "RSPM",
       "Repository": "https://cluster.rstudiopm.com/cran/__linux__/bionic/688",
@@ -2184,7 +2213,7 @@
   },
   "files": {
     "model_quality_metrics.Rmd": {
-      "checksum": "fa2a3bc9faf2298b0934a99230c0a4d2"
+      "checksum": "0aabc78bc93112fe798ed78012fd9433"
     },
     "packrat/desc/askpass": {
       "checksum": "f3640d9c1bebd3f5a6188eea0c23c533"
@@ -2197,6 +2226,9 @@
     },
     "packrat/desc/BH": {
       "checksum": "3b7edd866f5750b5ef52f5737ea3a12f"
+    },
+    "packrat/desc/bikeHelpR": {
+      "checksum": "1e59f7d0131e8173a4e1a7b9e837ea08"
     },
     "packrat/desc/bit": {
       "checksum": "0789ae684b877c3ee3327e4a4a5bc7ab"
@@ -2397,7 +2429,7 @@
       "checksum": "b6f35c64ff762d2a2c74d10460a480c6"
     },
     "packrat/packrat.lock": {
-      "checksum": "405b52d1e42b1747af15f65227c66503"
+      "checksum": "91481f816e98fcf64e21564724bd4d43"
     }
   },
   "users": null
